--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>Hello world</h1>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ad cupiditate magnam ex veritatis possimus distinctio soluta rerum commodi quod illum, excepturi officia atque quo? Eligendi excepturi porro ad asperiores facere.</p>
 </body>
 </html>
